Revision history for Metabase

{{$NEXT}}

    - Improve diagnostics on failure

0.012     2010-04-24 15:18:33 EST5EDT

    - Fix authentication cache bug (first check was always failing)

0.011     2010-04-23 23:38:58 EST5EDT

    - Fix cache attribute type constraint

    - Cache authentication strings, not objects

0.010     2010-04-23 17:40:39 EST5EDT

    - Add authentication caching.  Adds CHI as a prereq

    - Properly document Metabase::Gateway as a Moose::Role

0.009     2010-04-22 07:26:46 EST5EDT

    - Don't add undefined values to the index

0.008     2010-04-20 09:54:07 EST5EDT

    - Fact content metadata keys no longer have to be lowercase

0.007     2010-04-11 12:00:49 EST5EDT

    - Fix a bug in Metabase::Archive::S3 -- NOTE: THIS WILL BREAK
      ACCESS TO OLD S3 FACTS

0.006     2010-03-29 14:29:25 EST5EDT

    - JSON will now always encode/decode to/from ASCII

    - Converted to Dist::Zilla for easier release management

0.005

    - Remove dependency on JSON::XS and rely on JSON to use it
      if installed (see Task::Metabase)

    - Ensure JSON encoding includes utf8 encoding to avoid
      errors compressing wide characters in Metabase::Archive::S3

0.004 Mon Mar 15 22:30:34 EDT 2010
    - Fixed -limit operator for SimpleDB search
    - Reduced numerous prerequisites to lower verisons

0.003 Mon Mar  8 23:42:52 EST 2010
    - heavily revised for CPAN Testers 2.0 effort
    - Metabase::Gateway is now a Moose::Role
    - Added Amazon Web Service backends

0.002 (never released)
    - private development version, never released to CPAN

0.001 24 Jun 2009
    - original skeleton created at Oslo QA hackathon 2008